fix: resolve rebase conflict in TestExecuteStreamCommand
The rebase of ANE-2797 onto main-2.8.0 mixed up two test methods:
- testExecuteJarToAttributeConfiguration: restored to use local controller
- testExecuteJavaFileToAttributeConfigurationDynamicProperties: restored to use runner

Made-with: Cursor
(cherry picked from commit b65cbfdefc0586256136598f0d19a8d451831b5d)